# Valeo-Tasks

Module 1/: task1_copy_file.sh  task3_WIFI.sh
Module 1/Task2_Backup/: backup.service  backup.sh  backup.timer
module 2/Task2_Math_lib/: build_shared.sh  build_static.sh  main.c  math_functions.c  math_functions.h  myapp  readme  test
module 2/Task3_make/make/: Makefile  main.cpp
module 2/Task4_Cmake/Cmake/: CMakeLists.txt
module 2/Task4_Cmake/Cmake/include/: WriteInfile.h
module 2/Task4_Cmake/Cmake/src/: main.cpp  print.cpp
module 2/Task5_IPC/gtest/: main.cpp  test.cpp
module 2/Task5_IPC/logger/: CMakeLists.txt  log.cpp
module 2/Task5_IPC/pipes/: pipread  pipread.c  pipwrite  pipwrite.c
module 2/Task5_IPC/project/: CMakeLists.txt  README.md  run_logs.txt
module 2/Task5_IPC/project/file_handler/: fh.cpp
module 2/Task5_IPC/project/gtest/: CMakeLists.txt  test.cpp  units.h
module 2/Task5_IPC/project/logger/: simpleLogger.cpp
module 2/Task5_IPC/project/request/: request.cpp  request.h
module 2/Task5_IPC/project_finalEdit/: CMakeLists.txt  README.md  filehandler.service  run_logs.txt
module 2/Task5_IPC/project_finalEdit/file_handler/: fh.cpp  fh.h
module 2/Task5_IPC/project_finalEdit/logger/: simpleLogger.h
module 2/Task5_IPC/project_finalEdit/request/: request.cpp  request.h
module 2/Task5_IPC/project_finalEdit/test_req/: req.h  (+3 more)
module 2/Task5_IPC/sample/: fh  fh.cpp  request  request.cpp
module 2/Task5_IPC/shared_memory/: memreader  memreader.c  memwriter  memwriter.c
module 3/task1_u-boot/: 0001-commit-changes-on-qemu-defconfig.patch
(+3 files in other folders)
